--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -75,7 +75,7 @@ alternative, late 90s indie, and other trends of the past (With one new band
 that points forward to what was to come).
 
 This year I was busy, having relocated to State College, PA to continue my
-education. I wasn't paying as much attention to new music and it show, with only
+education. I wasn't paying as much attention to new music and it shows, with only
 five of the albums something I heard in the year of release. The music I was
 listening to at the time was either from decades gone by, or things from the
 current day that I really don't care for anymore.
