--- a/src/music/2020s.rst
+++ b/src/music/2020s.rst
@@ -184,6 +184,16 @@ Compiling my favorites here as they happen.
   "Sprawl II" for the first time, but the kind of joy only these guys can bring
   up.]
 
+- *The Car* by **Arctic Monkeys** - The progression into more subtle, artier
+  music has continued. So has my growing appreciation for their work. I had to
+  spend some time with it, but I think this might be my favorite of theirs so
+  far. A fascinating collection of lounge/soul inspired tracks, with several of
+  their very best, especially the stunning "Body Paint". I can't wait to see
+  where they go next. [*Memory*: I was more excited about the release of this
+  record than any other in 2022. I really liked the last one, even if it went
+  over most folks heads. With this album it looks like their maturing sound is
+  starting to catch on.]
+
 - *Once Twice Melody* by **Beach House** - It has become clear that all their
   records will be great, but some are greater than others. This is one of the
   top tier releases. More dreamy dream pop than we have seen since *Teen Dream*
