--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -44,7 +44,7 @@ old", but where exactly did it happen?
 
 *Section complete*: 7 Nov 2021
 
-*Latest update*: 8 Aug 2022
+*Latest update*: 11 February 2023
 
 *Total Albums*: 179
 
@@ -1136,7 +1136,9 @@ artist. This is the end of my youth.
   "heavy prog" that Crimson were up to in the early 70s. [*Memory*: The cover of this album
   will always remind me of Lakeshore Record Exchange, a record store that was
   walking distance from my first apartment in Rochester. They had a special
-  edition LP of this in stock for the last five years of their existence.]
+  edition LP of this in stock for the last five years of their existence. That
+  record store always smelled great. When I think of this album I smell a record
+  store of my past...]
 
 - *Uzu* by **Yamantaka//Sonic Titan** - I discoverd this record while preparing to
   attend the 2014 Polaris Music Prize Gala in Toronto. For several years I had
@@ -1253,6 +1255,16 @@ records.
   stunningly transparent account of someone who is really struggling. 
   [*Memory*: I'll never forget seeing the artist perform "The Riverbed" at 
   the 2014 Polaris Prize Gala]
+
+- *The Innocents* by **Weyes Blood** - A much rawer, and sadder affair than the
+  music that would make her famous, but in my opinion, still her best work. I
+  love the records that have come since, but this is really special. This is the
+  kind of music someone can only make before they know what they are fully
+  doing. "Ashes" and "February Skies" are two of my favorite songs of all time.
+  [*Memory*: It is rare for me at this point in life to find a new favorite
+  artist of all time. When I discovered **Weyes Blood** and took a deep dive into
+  her catalog in early 2023 I found an artist that I really connected with. This
+  is by far my favorite of her work, and one of my favorite albums of all time.]
 
 2015
 ----
@@ -1470,6 +1482,13 @@ George Michael, Prince, and David Bowie.
   completely under the radar. I wish the hipsters that were buzzing about this
   band at the start of the decade were still paying attention. This is some
   surprisingly complex, rocking stuff. [*Memory*: ]
+
+- *Front Row Seat to Earth* by **Weyes Blood** - A transitionary record between
+  her earlier dark, psychedelic folk and the brighter electronic infused indie
+  that came later. Her voice isn't quite perfect yet here in a way that sounds
+  great. Stunningly beautiful music. [*Memory*: I know I heard this on NPR back
+  in the day and thought about checking it out. I didn't discover her until
+  around 2022 and she has become one of my all-time favorites.]
 
 2017
 ----
@@ -1773,6 +1792,13 @@ thinking about the project I am working on here.
   not an album. This is how little music I've heard from 2019, that I need to
   count this. [*Memory*: Hearing this on Spotify recommendation radio and
   immediately loving it]
+
+- *Titanic Rising* by **Weyes Blood** - A terrific folk infused indie record
+  with an artist with a stunning voice. Probably the kind of music **Joni
+  Mitchell** would make if she was born in the late 90s. [*Memory*: It really
+  bothers me that I discovered this when Spotify radio kept playing me
+  "Andromeda". They were right, I love this. It just feels wrong that they are
+  having so much influence on my tastes now.]
 
 Footnotes
 ---------
