--- a/src/music/2020s.rst
+++ b/src/music/2020s.rst
@@ -257,4 +257,12 @@ albums below are in a virtual tie.
   [*Memory*: This was another discovery on the satellite radio. The Indie
   channel was playing "Stay Soft" about every half hour and I was glad to hear
   it.]
+
+- *And In the Darkness, Hearts Aglow* by **Weyes Blood** - Her albums keep
+  getting brighter and more upbeat, though this one almost feels like it is
+  doing it an a very tongue in cheek way. Really solid modern folk, with some
+  really interesting indie electronic touches. One of the best artists active
+  today. [*Memory*: This didn't do it for me the first time I listened, but it
+  really, really grew on me. I didn't even include it in my original list of the
+  best albums of the year. Now I'm questioning if it is my favorite from the year.]
   
