--- a/src/music/2000s.rst
+++ b/src/music/2000s.rst
@@ -27,15 +27,15 @@ young in such interesting times.
 
 *Section complete*: 11 Nov 2022
 
-*Latest update*: 11 Nov 2022
+*Latest update*: 13 Jan 2024
 
-*Total Albums*: 262
+*Total Albums*: 264
 
 *Top Artists*:
 
 - 5 Albums (2) - The Fiery Furnaces, Deerhoof
 
-- 4 Albums (4) - Muse, Of Montreal, Spoon
+- 4 Albums (4) - Muse, Of Montreal, Radiohead, Spoon
 
 *Favorite album*:
 
@@ -1886,6 +1886,14 @@ these albums.
   When I reviewed my candidates when making this list, I was tempted to leave it
   off. After half a listen I was rushing off to find a vinyl copy on discogs.]
 
+- *One More Drifter in the Snow* by **Aimee Mann** - Probably my favorite
+  Christmas record that isn't *A Charlie Brown Christmas* (which trancends the
+  genre for me), a great collection of traditionals and originals. This
+  captures the warm but somber mood that I associate with the holiday season,
+  much like that jazz classic. [*Memory*: Around 2019 I created a playlist of my
+  holiday favorites, and this is the traditional first album on all versions of
+  that compilation.]
+
 - *Pretty Little Head* by **Nellie Mckay** - Another double album genre
   experiment, this time on an indie label, where this belongs. Less white girl
   rapping, and what remains is well done. The genres here are more looking back
@@ -1971,6 +1979,18 @@ these albums.
   re-engage with their back-catalog and they would become one of my all-time
   favorites.]
 
+- *In Rainbows* by **Radiohead** - For a long time I saw this album as two
+  stunners ("Nude" and "Reckoner") and bunch of filler, but my perception has
+  changed. I now can hear this as a whole statement, and it holds up to their
+  albums leading up to this one. That said, this is the last one that I truely
+  think works as a complete work. My opinion has very much changed on this
+  record during the course of this project, and has motivated the most
+  significant revision of my personal music narrative to date. [*Memory*: It is
+  obviously very difficult to separate this record from how it was released.
+  This was the first time a major artist released an entire studio album as a
+  "pay what you want" download. Is that why I undervalued it for so many years,
+  perhaps. Now it graces my vinyl collection in physical form.]
+
 - *Classics* by **Ratatat** - Instrumental rock that is very much not post-rock,
   this whimsical record is more like the modern **Ventures**. One of those bands
   where every album is very similar, and I only end up caring about their very
@@ -2049,26 +2069,22 @@ lost to time) but an in progress version that I sent to myself via E-mail. I
 remember working on this list during my lunch breaks at work during the last
 months of the year, and I was sending it home to complete there over the holiday
 break. At this point, I owned and could assess 79 different releases! I know
-what I considered to be my top 25 records at that time, and 20 of those still
+what I considered to be my top 25 records at that time, and 21 of those still
 make my modern list. This is a much higher ratio than what would survive from my
 2009 favorites (see below), and I think this is a product of my ability to still
 listen with a kind of focus that the copious consumption facilitated by digital
 streaming would soon destroy.
 
-One of the five records that appeared on that original list of favorites that
-doesn't appear on my modern list feels like a case study in everything mentioned
-above. *In Rainbows* by **Radiohead** was the first "pay what you want", DRM
-free, digital release by a major, internationally famous rock band. Admittedly,
-they were a famous rock band that didn't seem very interested in being famous.
-At the time I have no doubt that I included it on my list because I thought that
-it was an important release, and 15 years later, I am convinced that it is one
-of the most important releases there has ever been. That said, it isn't a great
-album. Interestingly, as a band that became famous for working in the long form,
-it was mostly a miss as a long player. There are some killer singles on there
-though, and "Reckoner" is probably my favorite song of all-time from them, and
-one of the most beautiful rock songs ever made. It is hard to view this album
-separate from the context in which it was released, and I can't of a better way
-to summarize where pop music was in 2007 and my relationship with it.
+One of the records that appeared on that original list of favorites that feels
+like a case study in everything mentioned above. *In Rainbows* by **Radiohead**
+was the first "pay what you want", DRM free, digital release by a major,
+internationally famous rock band. Admittedly, they were a famous rock band that
+didn't seem very interested in being famous. At the time I have no doubt that I
+included it on my list because I thought that it was an important release, and
+15 years later, I am convinced that it is one of the most important releases
+there has ever been. It is hard to view this album separate from the context in
+which it was released, and I can't of a better way to summarize where pop music
+was in 2007 and my relationship with it.
 
 .. image:: images/2007.jpg
   :width: 900
@@ -3253,12 +3269,6 @@ This is the decade with the most albums, and by far the most favorite songs.
 - "Drawing the Line" by **Porcupine Tree** - The one great song off of their
   last album before hiatus. Much more of a straight ahead rock song than what
   these guys typically make.
-
-- "Nude" by **Radiohead** - One of my favorite songs of all time comes off of an
-  album that made me lose interest in the band.
-
-- "Reckoner" by **Radiohead** - OK, two of my favorite songs of all time are
-  somehow on an album I really didn't like in general.
 
 - "Golden Touch - Full Length" by **Razorlight** - Might be "Landfill Indie" but
   it is good "Landfill Indie".
