--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -44,13 +44,15 @@ old", but where exactly did it happen?
 
 *Section complete*: 7 Nov 2021
 
-*Latest update*: 11 February 2023
+*Latest update*: 13 Jan 2024
 
-*Total Albums*: 179
+*Total Albums*: 182
 
 *Top Artists*:
 
-- 5 albums (2) - Beach House, Lana Del Rey
+- 6 albums (1) - Lana Del Rey
+
+- 5 albums (1) - Beach House
 
 - 4 albums (5) - Ariel Pink, Ghost, Son Lux, Sufjan Stevens, Steven Wilson
 
